CKAD from KodeKloud/Ingress Networking/ingress-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      containers:
        - name: nginx-ingress-controller
          image: quay.io/repository/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
